--- a/src/index.html
+++ b/src/index.html
@@ -18,5 +18,7 @@ path: home
     <code class="bg-gray-100 text-blue-800 p-1">/index.njk</code>
   </p>
 
+  <p>This is a test.</p>
+
   {% include "./_includes/partials/content.html" %}
 </div>
